Incorporate PR suggestions